-feature#1505: Allow Device Edit from Graphs page
-feature: Make Graph and Data Source suggested naming more efficient
-feature: Make tree editing responive
-feature: Add support for DDERIVE and DCOUNTER to Cacti
-feature: Add Timezone support for Remote Data Collectors
-feature: Add One Minute Sampling to the default Data Source Profiles
-feature: Allow Top tabs to be Glyphs or Text or both

1.1.37
-issue#274: Allow Realtime Graph Popup Mode
-issue#1405: When Data Query columns are wide, they cause rendering issues
-issue#1414: DSSTATS reports incorrectly that a data source does not exist
-issue#1419: Filtering log results in errors in the log
-issue#1420: PHP NOTICE editing cdef and vdef items
-issue#1421: CLI upgrade_database.php PHP Warning on execution
-issue#1426: Remote poller erroring attempting to verify files
-issue#1432: Delete confirmation does not disappear
-issue#1443: Partial Save warnings under Settings -> Mail/Reporting/DNS
-issue#1447: CLI audit_database.php not detecting database name, and failed to create audit tables when run fresh
-issue#1453: CLI add_graph.php not allowing title to be set
-issue#1456: Increase minimum php version maintaining support for RHEL6
-issue#1457: Path-Based Cross-Site Scripting (XSS) issues
-issue#1458: Error in logs when creating new graphs
-issue#1459: Automation filter not applied correctly
-issue#1461: Setting output_format on input type causes no values to be returned
-issue#1464: Poller stuck in infinitely loop causing excess logging
-issue#1466: No scrollbars in mobile browsers
-issue#1468: Increase max length of host.snmp_sysObjectID column
-issue#1471: Undefined function found in global_languages.php
-issue#1472: Change Device Options - Style needs updating
-issue#1474: Check possibility for creation of temporary tables on install
-issue#1487: Undefined constant in ldap.php
-issue#1483: Create New Graphs - Paw Styling Issue
-issue#1493: Can't create tree branches with '#' sign