@@ -32,6 +32,7 @@ Cacti CHANGELOG
 -feature: Add Timezone support for Remote Data Collectors
 -feature: Add One Minute Sampling to the default Data Source Profiles
 -feature: Allow Top tabs to be Glyphs or Text or both
+-feature: Update JavaScript library jquery-migrate.js to 3.0.1
 
 1.1.37
 -issue#274: Allow Realtime Graph Popup Mode
